git-svn-id: https://www.fdsea33.fr/svn/praesens@6 3e045664-9743-0410-8348-e8b78a369948

--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -8,9 +8,9 @@
 #  code         :string(8)     not null
 #  admin        :boolean       not null
 #  siren        :string(9)     default("000000000"), not null
-#  created_at   :datetime      not null
+#  created_at   :datetime      
 #  created_by   :integer       
-#  updated_at   :datetime      not null
+#  updated_at   :datetime      
 #  updated_by   :integer       
 #  lock_version :integer       default(0), not null
 #
